Implement model layer